Fixed alignment between buttons and inputs.
This commit resolve locaweb/locawebstyle#988

--- a/source/assets/stylesheets/locastyle/modules/_buttons.sass
+++ b/source/assets/stylesheets/locastyle/modules/_buttons.sass
@@ -144,7 +144,7 @@
   // when in inline forms
   .ls-form-inline &
     padding: 0
-    margin: 20px 0 0
+    margin: 17px 0 0
     border: none
     display: inline-block
 
